--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>4Dinos</title>
 </head>
 <body>
-    
+    <div class="container">
+
+        <div class="screen" id="top-right">
+            <div class="dino" id="player1"></div>
+        </div>
+
+        <div class="screen" id="top-left">
+            <div class="dino" id="player2"></div>
+        </div>
+
+        <div class="screen" id="bottom-right">
+            <div class="dino" id="player3"></div>
+        </div>
+
+        <div class="screen" id="bottom-left">
+            <div class="dino" id="player4"></div>
+        </div>
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
