--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
     <div class="container">
 
         <div class="screen" id="top-right">
-            <div class="dino" id="player1"></div>
+            <div class="dino" id="player1">
+                <img src="./yellowdino.gif">
+                <div class="obstacle"></div>
+            </div>
         </div>
 
         <div class="screen" id="top-left">
-            <div class="dino" id="player2"></div>
+            <div class="dino" id="player2">
+                <img src="./bluedino.gif">
+                <div class="obstacle"></div>
+            </div>
         </div>
 
         <div class="screen" id="bottom-right">
-            <div class="dino" id="player3"></div>
+            <div class="dino" id="player3">
+                <img src="./pinkdino.gif">
+                <div class="obstacle"></div>
+            </div>
         </div>
 
         <div class="screen" id="bottom-left">
-            <div class="dino" id="player4"></div>
+            <div class="dino" id="player4">
+                <img src="./greendino.gif">
+                <div class="obstacle"></div>
+            </div>
         </div>
 
     </div>
