--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./cactus1.gif">
     <title>4Dinos</title>
 </head>
 <body>
     <div class="container">
 
         <div class="screen" id="top-right">
+            <div class="obstacle">
+                <img src="cactus1.gif">
+            </div>
+
             <div class="dino" id="player1">
                 <img src="./yellowdino.gif">
-                <div class="obstacle"></div>
             </div>
         </div>
 
         <div class="screen" id="top-left">
+
+            <div class="obstacle">
+                <img src="cactus1.gif">
+            </div>
+
             <div class="dino" id="player2">
                 <img src="./bluedino.gif">
                 <div class="obstacle"></div>
@@ -24,6 +33,11 @@
         </div>
 
         <div class="screen" id="bottom-right">
+
+            <div class="obstacle">
+                <img src="cactus1.gif">
+            </div>
+
             <div class="dino" id="player3">
                 <img src="./pinkdino.gif">
                 <div class="obstacle"></div>
@@ -31,6 +45,10 @@
         </div>
 
         <div class="screen" id="bottom-left">
+            <div class="obstacle">
+                <img src="cactus1.gif">
+            </div>
+
             <div class="dino" id="player4">
                 <img src="./greendino.gif">
                 <div class="obstacle"></div>
