organizando pastas das imagens

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
         <div class="screen" id="top-right">
             <div class="obstacle">
-                <img src="cactus1.gif">
+                <img src="/images/cactus/cactus1.gif">
             </div>
 
             <div class="dino" id="player1">
-                <img src="./yellowdino.gif">
+                <img src="./images/dinos/yellowdino.gif">
             </div>
         </div>
 
         <div class="screen" id="top-left">
 
             <div class="obstacle">
-                <img src="cactus1.gif">
+                <img src="/images/cactus/cactus1.gif">
             </div>
 
             <div class="dino" id="player2">
-                <img src="./bluedino.gif">
+                <img src="./images/dinos/bluedino.gif">
                 <div class="obstacle"></div>
             </div>
         </div>
@@ -35,22 +35,22 @@
         <div class="screen" id="bottom-right">
 
             <div class="obstacle">
-                <img src="cactus1.gif">
+                <img src="/images/cactus/cactus1.gif">
             </div>
 
             <div class="dino" id="player3">
-                <img src="./pinkdino.gif">
+                <img src="./images/dinos/pinkdino.gif">
                 <div class="obstacle"></div>
             </div>
         </div>
 
         <div class="screen" id="bottom-left">
             <div class="obstacle">
-                <img src="cactus1.gif">
+                <img src="./images/cactus/cactus1.gif">
             </div>
 
             <div class="dino" id="player4">
-                <img src="./greendino.gif">
+                <img src="./images/dinos/greendino.gif">
                 <div class="obstacle"></div>
             </div>
         </div>
