adicionando score ao html

--- a/index.html
+++ b/index.html
@@ -4,40 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="./cactus1.gif">
+    <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
     <title>4Dinos</title>
 </head>
 <body>
     <div class="container">
 
         <div class="screen" id="top-right">
-            <div class="obstacle">
-                <img src="/images/cactus/cactus1.gif">
-            </div>
-
+            <p class="score" id="s1">0</p>
             <div class="dino" id="player1">
                 <img src="./images/dinos/yellowdino.gif">
             </div>
         </div>
 
         <div class="screen" id="top-left">
-
-            <div class="obstacle">
-                <img src="/images/cactus/cactus1.gif">
-            </div>
-
+            <p class="score" id="s2">0</p>
             <div class="dino" id="player2">
                 <img src="./images/dinos/bluedino.gif">
-                <div class="obstacle"></div>
             </div>
         </div>
 
         <div class="screen" id="bottom-right">
-
-            <div class="obstacle">
-                <img src="/images/cactus/cactus1.gif">
-            </div>
-
+            <p class="score" id="s3">0</p>
             <div class="dino" id="player3">
                 <img src="./images/dinos/pinkdino.gif">
                 <div class="obstacle"></div>
@@ -45,10 +33,7 @@
         </div>
 
         <div class="screen" id="bottom-left">
-            <div class="obstacle">
-                <img src="./images/cactus/cactus1.gif">
-            </div>
-
+            <p class="score" id="s4">0</p>
             <div class="dino" id="player4">
                 <img src="./images/dinos/greendino.gif">
                 <div class="obstacle"></div>
