Criando e atualizando pasta E criando html para a pagina do menu

--- a/index.html
+++ b/index.html
@@ -3,42 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
     <title>4Dinos</title>
 </head>
 <body>
     <div class="container">
-
-        <div class="screen" id="top-right">
-            <p class="score" id="s1">0</p>
-            <div class="dino" id="player1">
-                <img src="./images/dinos/yellowdino.gif">
-            </div>
+        <div class="titulo">
+            4Dinos
         </div>
-
-        <div class="screen" id="top-left">
-            <p class="score" id="s2">0</p>
-            <div class="dino" id="player2">
-                <img src="./images/dinos/bluedino.gif">
-            </div>
+        <div class="butttons">
+            <a href="#">
+                <button>Começar</button>
+            </a>
+            <a href="#">
+                <button>Configurações</button>
+            </a>
+            <a href="#">
+                <button>Créditos</button>
+            </a>
         </div>
-
-        <div class="screen" id="bottom-right">
-            <p class="score" id="s3">0</p>
-            <div class="dino" id="player3">
-                <img src="./images/dinos/pinkdino.gif">
-            </div>
-        </div>
-
-        <div class="screen" id="bottom-left">
-            <p class="score" id="s4">0</p>
-            <div class="dino" id="player4">
-                <img src="./images/dinos/greendino.gif">
-            </div>
-        </div>
-
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
