--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
+
     <title>4Dinos</title>
 </head>
 <body>
