--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
     <title>4Dinos</title>
 </head>
@@ -39,6 +39,6 @@
         </div>
 
     </div>
-    <script src="/scripts/game.js"></script>
+    <script src="./scripts/game.js"></script>
 </body>
 </html>
