Adicionando botão de mute, créditos e box items

--- a/creditos.html
+++ b/creditos.html
@@ -8,6 +8,60 @@
     <title>4Dinos</title>
 </head>
 <body>
-    
+    <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/menu.css">
+    <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
+    <title>4Dinos</title>
+</head>
+<body>
+    <div class="container">
+        <h1><img src="./images/cactus/cactus2.gif" alt="logo" width="50" /> 4Dinos - Jogo Multijogador <img src="./images/cactus/cactus3.gif" alt="logo" width="50" /></h1>
+
+![Dino Azul](./images/dinos/bluedino.gif)
+![Dino Verde](./images/dinos/greendino.gif)
+![Dino Rosa](./images/dinos/pinkdino.gif)
+![Dino Amarelo](./images/dinos/yellowdino.gif)
+
+## Configurações Padrão de Teclas
+- 🟦 **Q**: Jogador 1
+- 🟩 **P**: Jogador 2 
+- 🟪 **X**: Jogador 3 
+- 🟨 **M**: Jogador 4 
+
+## Descrição
+
+4Dinos é um jogo inspirado no clássico jogo do dinossauro do Google, mas com o diferencial: até **4 jogadores podem competir simultaneamente**! Cada jogador controla um dinossauro de uma cor diferente, e os sprites são totalmente autorais, proporcionando uma experiência única e divertida.
+
+## Recursos
+
+- **Multijogador**: Até 4 jogadores podem competir, ideal para jogar com amigos e familiares.
+- **Dinossauros Coloridos**: Cada jogador tem um dinossauro de cor distinta.
+- **Sprites Autorais**: Todos os gráficos foram criados especialmente para este jogo.
+- **Mecânica Acessível**: Jogo fácil de entender, perfeito para todas as idades.
+
+## Tecnologias Usadas
+
+- **HTML5**: Para a estrutura do jogo.
+- **CSS3**: Para estilização e design visual.
+- **JavaScript**: Para lógica de jogo e interatividade.
+
+## Ferramentas Utilizadas
+
+- **LibreSprite**: Criação dos sprites do jogo.
+- **ezGif**: Redimensionamento de sprites sem perda de qualidade.
+- **mp3cut**: Edição de áudios para efeitos sonoros.
+- **VSCode**: Ambiente de desenvolvimento para escrever e compilar o código.
+- **Git e GitHub**: Controle de versão e hospedagem do projeto.
+
+---
+
+**Este é um projeto da faculdade IFPB - Campus Cajazeiras, desenvolvido para a disciplina de Gerência de Configuração e Mudanças, sob a orientação do professor Paulo de Freitas. O projeto foi realizado pelos alunos César Augusto Caju de Lacerda e Lucas de Morais Barboza.**
+    </div>
+</body>
+</html>
 </body>
 </html>
