--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./CSS/menu.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>4Dinos</title>
 </head>
 <body>
@@ -17,9 +18,11 @@
             <a href="./game.html">
                 <button>Começar</button>
             </a>
-            <a href="#">
-                <button>Configurações</button>
-            </a>
+            
+            <button class="mute" onclick="">
+                <i class='bx bxs-volume-mute'></i>A
+            </button>
+            
             <a href="#">
                 <button>Créditos</button>
             </a>
