adicionando estilo do menu

--- a/creditos.html
+++ b/creditos.html
@@ -8,60 +8,60 @@
     <title>4Dinos</title>
 </head>
 <body>
-    <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/menu.css">
-    <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
-    <title>4Dinos</title>
-</head>
-<body>
-    <div class="container">
-        <h1><img src="./images/cactus/cactus2.gif" alt="logo" width="50" /> 4Dinos - Jogo Multijogador <img src="./images/cactus/cactus3.gif" alt="logo" width="50" /></h1>
+    <div class="container-cred">
+        <h1>
+            <img src="./images/cactus/cactus2.gif" alt="logo" width="50" />
+            4Dinos - Jogo Multijogador
+            <img src="./images/cactus/cactus3.gif" alt="logo" width="50" />
+        </h1>
 
-![Dino Azul](./images/dinos/bluedino.gif)
-![Dino Verde](./images/dinos/greendino.gif)
-![Dino Rosa](./images/dinos/pinkdino.gif)
-![Dino Amarelo](./images/dinos/yellowdino.gif)
+        <img src="./images/dinos/bluedino.gif" alt="Dino Azul">
+        <img src="./images/dinos/greendino.gif" alt="Dino Verde">
+        <img src="./images/dinos/pinkdino.gif" alt="Dino Rosa">
+        <img src="./images/dinos/yellowdino.gif" alt="Dino Amarelo">
 
-## Configurações Padrão de Teclas
-- 🟦 **Q**: Jogador 1
-- 🟩 **P**: Jogador 2 
-- 🟪 **X**: Jogador 3 
-- 🟨 **M**: Jogador 4 
+        <h2>Configurações Padrão de Teclas</h2>
+        <ul>
+            <li>🟦 <strong>Q</strong>: Jogador 1</li>
+            <li>🟩 <strong>P</strong>: Jogador 2</li>
+            <li>🟪 <strong>X</strong>: Jogador 3</li>
+            <li>🟨 <strong>M</strong>: Jogador 4</li>
+        </ul>
 
-## Descrição
+        <h2>Descrição</h2>
+        <p>
+            4Dinos é um jogo inspirado no clássico jogo do dinossauro do Google, mas com o diferencial: até <strong>4 jogadores podem competir simultaneamente</strong>! Cada jogador controla um dinossauro de uma cor diferente, e os sprites são totalmente autorais, proporcionando uma experiência única e divertida.
+        </p>
 
-4Dinos é um jogo inspirado no clássico jogo do dinossauro do Google, mas com o diferencial: até **4 jogadores podem competir simultaneamente**! Cada jogador controla um dinossauro de uma cor diferente, e os sprites são totalmente autorais, proporcionando uma experiência única e divertida.
+        <h2>Recursos</h2>
+        <ul>
+            <li><strong>Multijogador</strong>: Até 4 jogadores podem competir, ideal para jogar com amigos e familiares.</li>
+            <li><strong>Dinossauros Coloridos</strong>: Cada jogador tem um dinossauro de cor distinta.</li>
+            <li><strong>Sprites Autorais</strong>: Todos os gráficos foram criados especialmente para este jogo.</li>
+            <li><strong>Mecânica Acessível</strong>: Jogo fácil de entender, perfeito para todas as idades.</li>
+        </ul>
 
-## Recursos
+        <h2>Tecnologias Usadas</h2>
+        <ul>
+            <li><strong>HTML5</strong>: Para a estrutura do jogo.</li>
+            <li><strong>CSS3</strong>: Para estilização e design visual.</li>
+            <li><strong>JavaScript</strong>: Para lógica de jogo e interatividade.</li>
+        </ul>
 
-- **Multijogador**: Até 4 jogadores podem competir, ideal para jogar com amigos e familiares.
-- **Dinossauros Coloridos**: Cada jogador tem um dinossauro de cor distinta.
-- **Sprites Autorais**: Todos os gráficos foram criados especialmente para este jogo.
-- **Mecânica Acessível**: Jogo fácil de entender, perfeito para todas as idades.
+        <h2>Ferramentas Utilizadas</h2>
+        <ul>
+            <li><strong>LibreSprite</strong>: Criação dos sprites do jogo.</li>
+            <li><strong>ezGif</strong>: Redimensionamento de sprites sem perda de qualidade.</li>
+            <li><strong>mp3cut</strong>: Edição de áudios para efeitos sonoros.</li>
+            <li><strong>VSCode</strong>: Ambiente de desenvolvimento para escrever e compilar o código.</li>
+            <li><strong>Git e GitHub</strong>: Controle de versão e hospedagem do projeto.</li>
+        </ul>
 
-## Tecnologias Usadas
+        <hr>
 
-- **HTML5**: Para a estrutura do jogo.
-- **CSS3**: Para estilização e design visual.
-- **JavaScript**: Para lógica de jogo e interatividade.
-
-## Ferramentas Utilizadas
-
-- **LibreSprite**: Criação dos sprites do jogo.
-- **ezGif**: Redimensionamento de sprites sem perda de qualidade.
-- **mp3cut**: Edição de áudios para efeitos sonoros.
-- **VSCode**: Ambiente de desenvolvimento para escrever e compilar o código.
-- **Git e GitHub**: Controle de versão e hospedagem do projeto.
-
----
-
-**Este é um projeto da faculdade IFPB - Campus Cajazeiras, desenvolvido para a disciplina de Gerência de Configuração e Mudanças, sob a orientação do professor Paulo de Freitas. O projeto foi realizado pelos alunos César Augusto Caju de Lacerda e Lucas de Morais Barboza.**
+        <p>
+            **Este é um projeto da faculdade IFPB - Campus Cajazeiras, desenvolvido para a disciplina de Gerência de Configuração e Mudanças, sob a orientação do professor Paulo de Freitas. O projeto foi realizado pelos alunos César Augusto Caju de Lacerda e Lucas de Morais Barboza.**
+        </p>
     </div>
-</body>
-</html>
 </body>
 </html>
