--- a/index.html
+++ b/index.html
@@ -4,30 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/menu.css">
-    <link rel="stylesheet" href="./CSS/style.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>4Dinos</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-menu">
         <div class="titulo">
             4Dinos
         </div>
         <div class="butttons">
             <a href="./game.html">
-                <button>Começar</button>
+                <button><img src="./play.gif"></button>
             </a>
-            
-            <button class="mute" onclick="">
-                <i class='bx bxs-volume-mute'></i>A
+
+            <button class="mute" onclick="mutar()">
+                <i class='bx bxs-volume-mute'></i>
             </button>
-            
-            <a href="#">
-                <button>Créditos</button>
+
+            <a href="./creditos.html">
+                <button><i class='bx bx-info-circle' ></i></button>
             </a>
         </div>
     </div>
-    <script src="./scripts/game.js"></script>
+    <div class="cactos">
+        <img src="./images/cactus/cactus1.gif">
+        <img src="./images/cactus/cactus2.gif">
+        <img src="./images/cactus/cactus3.gif">
+        <img src="./images/cactus/cactus1.gif">
+    </div>
+    <div class="dinos">
+        <img src="./images/dinos/bluedino.gif" class="blue">
+        <img src="./images/dinos/greendino.gif" class="green">
+        <img src="./images/dinos/pinkdino.gif" class="pink">
+        <img src="./images/dinos/yellowdino.gif" class="yellow">
+    </div>
 </body>
 </html>
