--- a/index.html
+++ b/index.html
@@ -15,29 +15,31 @@
         </div>
         <div class="butttons">
             <a href="./game.html">
-                <button><img src="./play.gif"></button>
+                <button><img src="./images/menu/play.gif"></button>
             </a>
 
             <button class="mute" onclick="mutar()">
-                <i class='bx bxs-volume-mute'></i>
+                <img src="./images/menu//mute.gif">
             </button>
 
             <a href="./creditos.html">
-                <button><i class='bx bx-info-circle' ></i></button>
+                <button class="info"><img src="./images/menu/info.gif"></button>
             </a>
         </div>
     </div>
-    <div class="cactos">
-        <img src="./images/cactus/cactus1.gif">
-        <img src="./images/cactus/cactus2.gif">
-        <img src="./images/cactus/cactus3.gif">
-        <img src="./images/cactus/cactus1.gif">
-    </div>
-    <div class="dinos">
-        <img src="./images/dinos/bluedino.gif" class="blue">
-        <img src="./images/dinos/greendino.gif" class="green">
-        <img src="./images/dinos/pinkdino.gif" class="pink">
-        <img src="./images/dinos/yellowdino.gif" class="yellow">
+    <div class="absolute">
+        <div class="cactos">
+            <img src="./images/cactus/cactus1.gif">
+            <img src="./images/cactus/cactus2.gif">
+            <img src="./images/cactus/cactus3.gif">
+            <img src="./images/cactus/cactus1.gif">
+        </div>
+        <div class="dinos">
+            <img src="./images/dinos/bluedino.gif" class="blue">
+            <img src="./images/dinos/greendino.gif" class="green">
+            <img src="./images/dinos/pinkdino.gif" class="pink">
+            <img src="./images/dinos/yellowdino.gif" class="yellow">
+        </div>
     </div>
 </body>
 </html>
