finalizando menu adicionando seta ao escolher botões e resolvendo bug de som

--- a/creditos.html
+++ b/creditos.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/menu.css">
+    <link rel="stylesheet" href="./CSS/info.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
     <title>4Dinos</title>
 </head>
 <body>
     <div class="container-cred">
         <h1>
-            <img src="./images/cactus/cactus2.gif" alt="logo" width="50" />
             4Dinos - Jogo Multijogador
-            <img src="./images/cactus/cactus3.gif" alt="logo" width="50" />
         </h1>
-
-        <img src="./images/dinos/bluedino.gif" alt="Dino Azul">
-        <img src="./images/dinos/greendino.gif" alt="Dino Verde">
-        <img src="./images/dinos/pinkdino.gif" alt="Dino Rosa">
-        <img src="./images/dinos/yellowdino.gif" alt="Dino Amarelo">
 
         <h2>Configurações Padrão de Teclas</h2>
         <ul>
