--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
             <img src="./images/dinos/yellowdino.gif" class="yellow">
         </div>
     </div>
+    <script src="./scripts/menu.js"></script>
 </body>
 </html>
