--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/menu.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>4Dinos</title>
 </head>
 <body>
@@ -41,6 +40,6 @@
             <img src="./images/dinos/yellowdino.gif" class="yellow">
         </div>
     </div>
-    <script src="./scripts/menu.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
