--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/menu.css">
+    <link rel="stylesheet" href="./style/menu.css">
     <link rel="icon" type="image/x-icon" href="./images/cactus/cactus1.gif">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>4Dinos</title>
 </head>
 <body>
@@ -22,7 +21,7 @@
                 <img src="./images/menu//mute.gif">
             </button>
 
-            <a href="./creditos.html">
+            <a href="./info.html">
                 <button class="info"><img src="./images/menu/info.gif"></button>
             </a>
         </div>
@@ -41,6 +40,30 @@
             <img src="./images/dinos/yellowdino.gif" class="yellow">
         </div>
     </div>
-    <script src="./scripts/menu.js"></script>
+
+    <script>
+        let buttons = document.querySelectorAll('button');
+        let isMuted = false;
+        let arrowdiv = document.createElement('div');
+        arrowdiv.classList.add('arrow');
+        let arrow = document.createElement('img');
+        arrow.setAttribute('src', './images/menu/seta.gif');
+        arrowdiv.appendChild(arrow)
+        let jumpSound = new Audio('./sounds/jump.m4a'); jumpSound.volume = 0.1;
+
+        function mutar(){
+            isMuted = !isMuted;
+            jumpSound.muted = isMuted;
+            hitSound.muted = isMuted;
+        }
+
+        buttons.forEach(button => {
+        button.addEventListener('mouseenter', () => {
+            jumpSound.currentTime = 0;
+            jumpSound.play();
+            button.appendChild(arrowdiv)
+        })
+    })
+    </script>
 </body>
 </html>
